# WebSocketLib

./: .gitignore  CMakeLists.txt  README.md
src/: templates.h  ws_client.cpp  ws_client.h  ws_client_io.cpp  ws_client_io.h  ws_serverlib.cpp  ws_serverlib.h  ws_ssl_client.cpp  ws_ssl_client.h  ws_tcp_client.cpp  ws_tcp_client.h
tests/: CMakeLists.txt  Config.cpp  Config.h  WSClientTest.cpp  WSServerTest.cpp  websocket.config
